force-app/main/default/objects/AI_Security_Settings__c/AI_Security_Settings__c.object-meta.xml
<CustomObject>
    <label>AI Security Settings</label>
    <pluralLabel>AI Security Settings</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Setting Name</label>
    </nameField>
    <customSettingsType>Hierarchy</customSettingsType>
</CustomObject>