force-app/main/default/objects/AI_Security_Settings__c/fields/Enable_Encryption__c.field-meta.xml
<CustomField>
    <fullName>Enable_Encryption__c</fullName>
    <label>Enable_Encryption_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>