force-app/main/default/objects/AI_Security_Settings__c/fields/Enable_Key_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Key_Rotation__c</fullName>
    <label>Enable_Key_Rotation_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>