force-app/main/default/objects/AI_Security_Settings__c/fields/Enable_Security_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Enable_Security_Monitoring__c</fullName>
    <label>Enable_Security_Monitoring_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>