force-app/main/default/objects/AI_Security_Settings__c/fields/Enable_Threat_Detection__c.field-meta.xml
<CustomField>
    <fullName>Enable_Threat_Detection__c</fullName>
    <label>Enable_Threat_Detection_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>