force-app/main/default/objects/AI_Security_Settings__c/fields/Key_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Key_Metadata__c</fullName>
    <label>Key_Metadata_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>