force-app/main/default/objects/AI_Security_Settings__c/fields/Key_Rotation_Days__c.field-meta.xml
<CustomField>
    <fullName>Key_Rotation_Days__c</fullName>
    <label>Key_Rotation_Days_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>