force-app/main/default/objects/AI_Security_Settings__c/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <label>Key_Version_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>