force-app/main/default/objects/AI_Security_Settings__c/fields/Last_Key_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Key_Update__c</fullName>
    <label>Last_Key_Update_</label>
    <type>DateTime</type>

</CustomField>