force-app/main/default/objects/AI_Security_Settings__c/fields/Log_Rate_Limit_Violations__c.field-meta.xml
<CustomField>
    <fullName>Log_Rate_Limit_Violations__c</fullName>
    <label>Log_Rate_Limit_Violations_</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>