force-app/main/default/objects/AI_Security_Settings__c/fields/Next_Rotation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Rotation_Date__c</fullName>
    <label>Next_Rotation_Date_</label>
    <type>DateTime</type>

</CustomField>